--- a/AssignmentTable.html
+++ b/AssignmentTable.html
@@ -58,9 +58,15 @@
           <th>Github Page</th>
         </tr>
         <tr>
-          <td>Assignment 1 - Card</td>
+          <td>Assignment 1 - RWD</td>
           <td>HTML/CSS</td>
-          <td><a href="#" class="code">Code</a></td>
+          <td>
+            <a
+              href="https://github.com/Dimple278/LF-Assignment/tree/main/LF_Assignment1-RWD"
+              class="code"
+              >Code</a
+            >
+          </td>
           <td><a href="#" class="host">Host</a></td>
         </tr>
         <!-- <tr>
