--- a/AssignmentTable.html
+++ b/AssignmentTable.html
@@ -61,13 +61,15 @@
           <td>Assignment 1 - RWD</td>
           <td>HTML/CSS</td>
           <td>
-            <a
-              href="https://github.com/Dimple278/LF-Assignment/tree/main/LF_Assignment1-RWD"
-              class="code"
+            <a href="https://github.com/Dimple278/LF_Assignment1" class="code"
               >Code</a
             >
           </td>
-          <td><a href="#" class="host">Host</a></td>
+          <td>
+            <a href="https://dimple278.github.io/LF_Assignment1/" class="host"
+              >Host</a
+            >
+          </td>
         </tr>
         <!-- <tr>
           <td>Assignment 2 - Responsive Card</td>
