--- a/index.html
+++ b/index.html
@@ -71,18 +71,38 @@
             >
           </td>
         </tr>
-        <!-- <tr>
-          <td>Assignment 2 - Responsive Card</td>
-          <td>HTML/CSS</td>
-          <td><a href="#" class="code">Code</a></td>
-          <td><a href="#" class="host">Host</a></td>
-        </tr>
         <tr>
-          <td>Assignment 3 - Landing Page Responsive</td>
+          <td>Assignment 1 BEM</td>
           <td>HTML/CSS</td>
-          <td><a href="#" class="code">Code</a></td>
-          <td><a href="#" class="host">Host</a></td>
+          <td>
+            <a
+              href="https://github.com/Dimple278/LF_Assignment1/tree/BEM"
+              class="code"
+              >Code</a
+            >
+          </td>
+          <td>
+            <a href="https://dimple278.github.io/LF_Assignment1/" class="host"
+              >Host</a
+            >
+          </td>
         </tr>
+
+        <tr>
+          <td>Assignment 2 - Landing Page Responsive</td>
+          <td>HTML/CSS</td>
+          <td>
+            <a href="https://github.com/Dimple278/LF-Assignment2" class="code"
+              >Code</a
+            >
+          </td>
+          <td>
+            <a href="https://dimple278.github.io/LF-Assignment2/" class="host"
+              >Host</a
+            >
+          </td>
+        </tr>
+        <!-- 
         <tr>
           <td>Frontend Final Assignment</td>
           <td>HTML/CSS</td>
