add target property

--- a/index.html
+++ b/index.html
@@ -61,12 +61,18 @@
           <td>Assignment 1 - RWD</td>
           <td>HTML/CSS</td>
           <td>
-            <a href="https://github.com/Dimple278/LF_Assignment1" class="code"
+            <a
+              target="blank"
+              href="https://github.com/Dimple278/LF_Assignment1"
+              class="code"
               >Code</a
             >
           </td>
           <td>
-            <a href="https://dimple278.github.io/LF_Assignment1/" class="host"
+            <a
+              target="blank"
+              href="https://dimple278.github.io/LF_Assignment1/"
+              class="host"
               >Host</a
             >
           </td>
@@ -76,13 +82,17 @@
           <td>HTML/CSS</td>
           <td>
             <a
+              target="blank"
               href="https://github.com/Dimple278/LF_Assignment1/tree/BEM"
               class="code"
               >Code</a
             >
           </td>
           <td>
-            <a href="https://dimple278.github.io/LF_Assignment1/" class="host"
+            <a
+              target="blank"
+              href="https://dimple278.github.io/LF_Assignment1/"
+              class="host"
               >Host</a
             >
           </td>
@@ -92,12 +102,18 @@
           <td>Assignment 2 - Landing Page Responsive</td>
           <td>HTML/CSS</td>
           <td>
-            <a href="https://github.com/Dimple278/LF-Assignment2" class="code"
+            <a
+              target="blank"
+              href="https://github.com/Dimple278/LF-Assignment2"
+              class="code"
               >Code</a
             >
           </td>
           <td>
-            <a href="https://dimple278.github.io/LF-Assignment2/" class="host"
+            <a
+              target="blank"
+              href="https://dimple278.github.io/LF-Assignment2/"
+              class="host"
               >Host</a
             >
           </td>
