add ball collision

--- a/index.html
+++ b/index.html
@@ -118,13 +118,22 @@
             >
           </td>
         </tr>
-        <!-- 
+
         <tr>
-          <td>Frontend Final Assignment</td>
-          <td>HTML/CSS</td>
-          <td><a href="#" class="code">Code</a></td>
-          <td><a href="#" class="host">Host</a></td>
+          <td>JS Ball Collision</td>
+          <td>JavaScript</td>
+          <td>
+            <a href="https://github.com/Dimple278/Ball-Collision" class="code"
+              >Code</a
+            >
+          </td>
+          <td>
+            <a href="https://dimple278.github.io/Ball-Collision/" class="host"
+              >Host</a
+            >
+          </td>
         </tr>
+        <!-- 
         <tr>
           <td>TODO App</td>
           <td>JS</td>
