add TS assignment1 Image Carousel

--- a/index.html
+++ b/index.html
@@ -133,13 +133,22 @@
             >
           </td>
         </tr>
-        <!-- 
+
         <tr>
-          <td>TODO App</td>
-          <td>JS</td>
-          <td><a href="#" class="code">Code</a></td>
-          <td><a href="#" class="host">Host</a></td>
+          <td>Image Carousel</td>
+          <td>TS</td>
+          <td>
+            <a href="https://github.com/Dimple278/Image-Carousel" class="code"
+              >Code</a
+            >
+          </td>
+          <td>
+            <a href="https://image-carousel-hhgj.vercel.app/" class="host"
+              >Host</a
+            >
+          </td>
         </tr>
+        <!-- 
         <tr>
           <td>Image Carousel</td>
           <td>JS</td>
