--- a/index.html
+++ b/index.html
@@ -148,19 +148,43 @@
             >
           </td>
         </tr>
-        <!-- 
+
         <tr>
-          <td>Image Carousel</td>
-          <td>JS</td>
-          <td><a href="#" class="code">Code</a></td>
-          <td><a href="#" class="host">Host</a></td>
+          <td>Car Lane Game</td>
+          <td>TS</td>
+          <td>
+            <a href="https://github.com/Dimple278/Car-Lane-Game" class="code"
+              >Code</a
+            >
+          </td>
+          <td>
+            <a href="https://car-lane-game-seven.vercel.app/" class="host"
+              >Host</a
+            >
+          </td>
         </tr>
+
         <tr>
+          <td>Doodle Jump Game</td>
+          <td>TS</td>
+          <td>
+            <a href="https://github.com/Dimple278/Doodle-Jump-Game" class="code"
+              >Code</a
+            >
+          </td>
+          <td>
+            <a href="https://doodle-jump-game-phi.vercel.app/" class="host"
+              >Host</a
+            >
+          </td>
+        </tr>
+        <!-- <tr>
           <td>Ball Collision</td>
           <td>JS</td>
           <td><a href="#" class="code">Code</a></td>
           <td><a href="#" class="host">Host</a></td>
-        </tr>
+        </tr> -->
+        <!-- 
         <tr>
           <td>Doodle Jump</td>
           <td>JS</td>
