Add database assignments

--- a/index.html
+++ b/index.html
@@ -178,25 +178,42 @@
             >
           </td>
         </tr>
-        <!-- <tr>
-          <td>Ball Collision</td>
-          <td>JS</td>
-          <td><a href="#" class="code">Code</a></td>
-          <td><a href="#" class="host">Host</a></td>
-        </tr> -->
-        <!-- 
         <tr>
-          <td>Doodle Jump</td>
-          <td>JS</td>
-          <td><a href="#" class="code">Code</a></td>
-          <td><a href="#" class="host">Host</a></td>
+          <td>Botanical Defense</td>
+          <td>Minor Project</td>
+          <td>
+            <a
+              href="https://github.com/Dimple278/Botanical-Defense"
+              class="code"
+              >Code</a
+            >
+          </td>
+          <td><a href="botanical-defense.vercel.app" class="host">Host</a></td>
         </tr>
         <tr>
-          <td>ToDO App - TS</td>
-          <td>Typescript</td>
-          <td><a href="#" class="code">Code</a></td>
-          <td><a href="#" class="host">Host</a></td>
-        </tr> -->
+          <td>Database Assignment DAY 1</td>
+          <td>Database</td>
+          <td>
+            <a
+              href="https://open-bandana-fd3.notion.site/LF-Database-Assignment-Day1-5f868cb68904450eb6ae1ce1e18e03c1"
+              class="code"
+              >Code</a
+            >
+          </td>
+          <td>N/A</td>
+        </tr>
+        <tr>
+          <td>Database Assignment DAY 2</td>
+          <td>Database</td>
+          <td>
+            <a
+              href="https://open-bandana-fd3.notion.site/LF-Database-Assignment-Day2-5478ae5a4234430cac268c3924e1499f"
+              class="code"
+              >Code</a
+            >
+          </td>
+          <td>N/A</td>
+        </tr>
       </table>
     </div>
   </body>
