add target blank

--- a/index.html
+++ b/index.html
@@ -123,12 +123,18 @@
           <td>JS Ball Collision</td>
           <td>JavaScript</td>
           <td>
-            <a href="https://github.com/Dimple278/Ball-Collision" class="code"
+            <a
+              target="blank"
+              href="https://github.com/Dimple278/Ball-Collision"
+              class="code"
               >Code</a
             >
           </td>
           <td>
-            <a href="https://dimple278.github.io/Ball-Collision/" class="host"
+            <a
+              target="blank"
+              href="https://dimple278.github.io/Ball-Collision/"
+              class="host"
               >Host</a
             >
           </td>
@@ -138,12 +144,18 @@
           <td>Image Carousel</td>
           <td>TS</td>
           <td>
-            <a href="https://github.com/Dimple278/Image-Carousel" class="code"
+            <a
+              target="blank"
+              href="https://github.com/Dimple278/Image-Carousel"
+              class="code"
               >Code</a
             >
           </td>
           <td>
-            <a href="https://image-carousel-hhgj.vercel.app/" class="host"
+            <a
+              target="blank"
+              href="https://image-carousel-hhgj.vercel.app/"
+              class="host"
               >Host</a
             >
           </td>
@@ -153,12 +165,18 @@
           <td>Car Lane Game</td>
           <td>TS</td>
           <td>
-            <a href="https://github.com/Dimple278/Car-Lane-Game" class="code"
+            <a
+              target="blank"
+              href="https://github.com/Dimple278/Car-Lane-Game"
+              class="code"
               >Code</a
             >
           </td>
           <td>
-            <a href="https://car-lane-game-seven.vercel.app/" class="host"
+            <a
+              target="blank"
+              href="https://car-lane-game-seven.vercel.app/"
+              class="host"
               >Host</a
             >
           </td>
@@ -168,12 +186,18 @@
           <td>Doodle Jump Game</td>
           <td>TS</td>
           <td>
-            <a href="https://github.com/Dimple278/Doodle-Jump-Game" class="code"
+            <a
+              target="blank"
+              href="https://github.com/Dimple278/Doodle-Jump-Game"
+              class="code"
               >Code</a
             >
           </td>
           <td>
-            <a href="https://doodle-jump-game-phi.vercel.app/" class="host"
+            <a
+              target="blank"
+              href="https://doodle-jump-game-phi.vercel.app/"
+              class="host"
               >Host</a
             >
           </td>
@@ -183,18 +207,24 @@
           <td>Minor Project</td>
           <td>
             <a
+              target="blank"
               href="https://github.com/Dimple278/Botanical-Defense"
               class="code"
               >Code</a
             >
           </td>
-          <td><a href="botanical-defense.vercel.app" class="host">Host</a></td>
+          <td>
+            <a target="blank" href="botanical-defense.vercel.app" class="host"
+              >Host</a
+            >
+          </td>
         </tr>
         <tr>
           <td>Database Assignment DAY 1</td>
           <td>Database</td>
           <td>
             <a
+              target="blank"
               href="https://open-bandana-fd3.notion.site/LF-Database-Assignment-Day1-5f868cb68904450eb6ae1ce1e18e03c1"
               class="code"
               >Code</a
@@ -207,6 +237,7 @@
           <td>Database</td>
           <td>
             <a
+              target="blank"
               href="https://open-bandana-fd3.notion.site/LF-Database-Assignment-Day2-5478ae5a4234430cac268c3924e1499f"
               class="code"
               >Code</a
