--- a/index.html
+++ b/index.html
@@ -7,36 +7,50 @@
     <style>
       body {
         font-family: Arial, sans-serif;
+        background-color: #f4f4f4;
+        margin: 0;
+        padding: 0;
       }
       .container {
-        width: 60%;
-        margin: auto;
-        border-collapse: collapse;
+        width: 80%;
+        margin: 50px auto;
+        padding: 20px;
+        background-color: #fff;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
       }
       h1,
       h2 {
         text-align: center;
+        color: #333;
       }
       table {
         width: 100%;
         border-collapse: collapse;
         margin: 20px 0;
+        font-size: 16px;
       }
       th,
       td {
-        border: 1px solid #000;
-        padding: 10px;
+        border: 1px solid #ddd;
+        padding: 12px;
         text-align: center;
       }
       th {
         background-color: #4caf50;
         color: white;
       }
+      tr:nth-child(even) {
+        background-color: #f2f2f2;
+      }
+      tr:hover {
+        background-color: #ddd;
+      }
       td a {
         text-decoration: none;
         color: white;
-        padding: 5px 10px;
+        padding: 8px 12px;
         border-radius: 5px;
+        display: inline-block;
       }
       .code {
         background-color: #4caf50;
@@ -62,7 +76,7 @@
           <td>HTML/CSS</td>
           <td>
             <a
-              target="blank"
+              target="_blank"
               href="https://github.com/Dimple278/LF_Assignment1"
               class="code"
               >Code</a
@@ -70,7 +84,7 @@
           </td>
           <td>
             <a
-              target="blank"
+              target="_blank"
               href="https://dimple278.github.io/LF_Assignment1/"
               class="host"
               >Host</a
@@ -82,7 +96,7 @@
           <td>HTML/CSS</td>
           <td>
             <a
-              target="blank"
+              target="_blank"
               href="https://github.com/Dimple278/LF_Assignment1/tree/BEM"
               class="code"
               >Code</a
@@ -90,7 +104,7 @@
           </td>
           <td>
             <a
-              target="blank"
+              target="_blank"
               href="https://dimple278.github.io/LF_Assignment1/"
               class="host"
               >Host</a
@@ -103,7 +117,7 @@
           <td>HTML/CSS</td>
           <td>
             <a
-              target="blank"
+              target="_blank"
               href="https://github.com/Dimple278/LF-Assignment2"
               class="code"
               >Code</a
@@ -111,7 +125,7 @@
           </td>
           <td>
             <a
-              target="blank"
+              target="_blank"
               href="https://dimple278.github.io/LF-Assignment2/"
               class="host"
               >Host</a
@@ -124,7 +138,7 @@
           <td>JavaScript</td>
           <td>
             <a
-              target="blank"
+              target="_blank"
               href="https://github.com/Dimple278/Ball-Collision"
               class="code"
               >Code</a
@@ -132,7 +146,7 @@
           </td>
           <td>
             <a
-              target="blank"
+              target="_blank"
               href="https://dimple278.github.io/Ball-Collision/"
               class="host"
               >Host</a
@@ -145,7 +159,7 @@
           <td>TS</td>
           <td>
             <a
-              target="blank"
+              target="_blank"
               href="https://github.com/Dimple278/Image-Carousel"
               class="code"
               >Code</a
@@ -153,7 +167,7 @@
           </td>
           <td>
             <a
-              target="blank"
+              target="_blank"
               href="https://image-carousel-hhgj.vercel.app/"
               class="host"
               >Host</a
@@ -166,7 +180,7 @@
           <td>TS</td>
           <td>
             <a
-              target="blank"
+              target="_blank"
               href="https://github.com/Dimple278/Car-Lane-Game"
               class="code"
               >Code</a
@@ -174,7 +188,7 @@
           </td>
           <td>
             <a
-              target="blank"
+              target="_blank"
               href="https://car-lane-game-seven.vercel.app/"
               class="host"
               >Host</a
@@ -187,7 +201,7 @@
           <td>TS</td>
           <td>
             <a
-              target="blank"
+              target="_blank"
               href="https://github.com/Dimple278/Doodle-Jump-Game"
               class="code"
               >Code</a
@@ -195,7 +209,7 @@
           </td>
           <td>
             <a
-              target="blank"
+              target="_blank"
               href="https://doodle-jump-game-phi.vercel.app/"
               class="host"
               >Host</a
@@ -207,14 +221,17 @@
           <td>Minor Project</td>
           <td>
             <a
-              target="blank"
+              target="_blank"
               href="https://github.com/Dimple278/Botanical-Defense"
               class="code"
               >Code</a
             >
           </td>
           <td>
-            <a target="blank" href="botanical-defense.vercel.app" class="host"
+            <a
+              target="_blank"
+              href="https://botanical-defense.vercel.app"
+              class="host"
               >Host</a
             >
           </td>
@@ -224,7 +241,7 @@
           <td>Database</td>
           <td>
             <a
-              target="blank"
+              target="_blank"
               href="https://open-bandana-fd3.notion.site/LF-Database-Assignment-Day1-5f868cb68904450eb6ae1ce1e18e03c1"
               class="code"
               >Code</a
@@ -237,7 +254,7 @@
           <td>Database</td>
           <td>
             <a
-              target="blank"
+              target="_blank"
               href="https://open-bandana-fd3.notion.site/LF-Database-Assignment-Day2-5478ae5a4234430cac268c3924e1499f"
               class="code"
               >Code</a
