add day3 database assignment

--- a/index.html
+++ b/index.html
@@ -262,6 +262,26 @@
           </td>
           <td>N/A</td>
         </tr>
+        <tr>
+          <td>Database Assignment DAY 3</td>
+          <td>Database</td>
+          <td>
+            <a
+              target="_blank"
+              href="https://github.com/Dimple278/LF-DatabaseAssignmets/tree/main"
+              class="code"
+              >Code</a
+            >
+          </td>
+          <td>
+            <a
+              target="_blank"
+              href="https://open-bandana-fd3.notion.site/LF-Database-Assignment3-c956befb59cd4f5f94d124897b47d5f5"
+              class="code"
+              >Code</a
+            >
+          </td>
+        </tr>
       </table>
     </div>
   </body>
