add backend assignment

--- a/index.html
+++ b/index.html
@@ -278,8 +278,38 @@
               target="_blank"
               href="https://open-bandana-fd3.notion.site/LF-Database-Assignment3-c956befb59cd4f5f94d124897b47d5f5"
               class="code"
+              >Demo</a
+            >
+          </td>
+        </tr>
+        <tr>
+          <td>NOde JS Assignment 1</td>
+          <td>Backend</td>
+          <td>
+            <a
+              target="_blank"
+              href="https://github.com/Dimple278/LF_Assignment_Todo"
+              class="code"
               >Code</a
             >
+          </td>
+          <td>
+            <a target="_blank" href="#" class="code">N/A</a>
+          </td>
+        </tr>
+        <tr>
+          <td>NOde JS Assignment 2</td>
+          <td>Backend</td>
+          <td>
+            <a
+              target="_blank"
+              href="https://github.com/Dimple278/LF_BackendAssignment2"
+              class="code"
+              >Code</a
+            >
+          </td>
+          <td>
+            <a target="_blank" href="#" class="code">N/A</a>
           </td>
         </tr>
       </table>
