--- a/index.html
+++ b/index.html
@@ -327,6 +327,21 @@
             <a target="_blank" href="#" class="code">N/A</a>
           </td>
         </tr>
+        <tr>
+          <td>NOde JS Assignment 4</td>
+          <td>Backend</td>
+          <td>
+            <a
+              target="_blank"
+              href="https://github.com/Dimple278/LF_BackendAssignment2/tree/assignment4"
+              class="code"
+              >Code</a
+            >
+          </td>
+          <td>
+            <a target="_blank" href="#" class="code">N/A</a>
+          </td>
+        </tr>
       </table>
     </div>
   </body>
