Add assignment 6 and 7

--- a/index.html
+++ b/index.html
@@ -357,6 +357,36 @@
             <a target="_blank" href="#" class="code">N/A</a>
           </td>
         </tr>
+        <tr>
+          <td>NOde JS Assignment 6</td>
+          <td>Backend</td>
+          <td>
+            <a
+              target="_blank"
+              href="https://github.com/Dimple278/LF_Assignment_Todo2-7"
+              class="code"
+              >Code</a
+            >
+          </td>
+          <td>
+            <a target="_blank" href="#" class="code">N/A</a>
+          </td>
+        </tr>
+        <tr>
+          <td>NOde JS Assignment 7</td>
+          <td>Backend</td>
+          <td>
+            <a
+              target="_blank"
+              href="https://github.com/Dimple278/LF_Assignment_Todo2-7"
+              class="code"
+              >Code</a
+            >
+          </td>
+          <td>
+            <a target="_blank" href="#" class="code">N/A</a>
+          </td>
+        </tr>
       </table>
     </div>
   </body>
